1.0
===

- Applied Roger Chapman's patch adding the pascalcasetoword option to FormHelper.Select options dictionary. 

- Applied Dan Goldstein's patch fixing MR-346
  "FormHelper's disablevalidation parameter only works when in Push command and on field"

- Fixed MR-409
  Introduced IMonoRailContainerEvents and IMonoRailConfigurationEvents that might be implemented by the
  HttpApplication subclass

- Fixed MR-412
  "When applying a layout attribute over an Action, layout doesn't render for the rendered view."

- Applied James Curran's patch fixing MR-391
  "ViewComponentDetailsAttribute use could lead to duplicate names."

- Applied Mike Nichols' patch fixing MR-392
  "FormHelper.LiteralFor feature addition"

- Applied Alwin's patch fixing MR-398
  "Could not save <model>. Ambiguous match found. (AmbiguousMatchException 
   when using Scaffolding and ActiveRecordValidationBase<T>)"

- Applied James Curran's patch fixing MR-419
  "Improving initializing Service Enabled Components"

- Added FormHelper.TextFieldAutoComplete for combining AJAX AutoCompletion and FormHelper's round trip
  support.

- Added possibility to create labels in CheckboxLists.

- Applied James Curran's patch fixing MR-390
  "Adding AbstractHelper(IEngineContext) ctor"

- Applied Gauthier Segay's patch fixing MR-388 
  "There should be a way to preserve url query string arguments while using DiggStylePagination" 

- Applied Mike Nichols' patch adding two more events to the extension manager.

- Applied Felix Gartsman's patch fixing MR-387
  "ViewComponent selective caching"

- Applied Felix Gartsman's patch fixing MR-368
  "Added DetachedCriteria support to ARPaginationHelper/ARPaginableCriteria"

- Applied Gauthier Segay's patch fixing MR-384
  "GenericCustomPage<T> should rely on IEnumerable<T> instead of IList<T> for it's datasource"

- Applied James Curran's patch fixing MR-347
  "Cannot specify a default value for ViewComponentParameterAttribute"

- Applied Adam Tybor's patch fixing MR-370